--- a/build.yaml
+++ b/build.yaml
@@ -19,5 +19,5 @@
 #
 ---
 include:
-  - board: corneish_zen_v2_left
-  - board: corneish_zen_v2_right
+  - board: arckeys_left
+  - board: arckeys_right
