--- a/config/arm/Arckeys/arckeys.dtsi
+++ b/config/arm/Arckeys/arckeys.dtsi
@@ -30,3 +30,25 @@
     };
 
 };
+
+
+
+&adc {
+    status = "okay";
+};
+
+&gpiote {
+    status = "okay";
+};
+
+&gpio0 {
+    status = "okay";
+};
+
+&gpio1 {
+    status = "okay";
+};
+
+&usbd {
+    status = "okay";
+};
