--- a/config/boards/arm/Arckeys/Kconfig
+++ b/config/boards/arm/Arckeys/Kconfig
@@ -1,10 +1,7 @@
-#
-# Copyright (c) 2022 The ZMK Contributors
 # SPDX-License-Identifier: MIT
-#
 
-config BOARD_ARCKEYS_LEFT
-    bool
-
-config BOARD_ARCKEYS_RIGHT
-    bool
+config BOARD_ENABLE_DCDC
+    bool "Enable DCDC mode"
+    select SOC_DCDC_NRF52X
+    default y
+    depends on BOARD_ARCKEYS_LEFT || BOARD_ARCKEYS_RIGHT
