--- a/config/boards/arm/Arckeys/arckeys_left.dts
+++ b/config/boards/arm/Arckeys/arckeys_left.dts
@@ -1,6 +1,6 @@
 /*
 *
-* Copyright (c) 2024 Ireh Choi
+* Copyright (c) 2023 The ZMK Contributors
 * SPDX-License-Identifier: MIT
 *
 */
@@ -8,29 +8,23 @@
 #include "arckeys.dtsi"
 
 /{
-    chosen {
-    };
-
     kscan0: kscan {
         compatible = "zmk,kscan-gpio-matrix";
 
         diode-direction = "col2row";
-        
         row-gpios
-            = <&gpio0 11 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 1 (top row)
-            , <&gpio1  9 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 2
-            , <&gpio0  5 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 3
-            , <&gpio0  4 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 4 (bottom row)
+            = <&gpio0 29 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&gpio0 30 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&gpio0 4 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&gpio0 5 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             ;
 
         col-gpios
-            = <&gpio0 31 GPIO_ACTIVE_HIGH> // Col 1 L (most left)
-            , <&gpio0 30 GPIO_ACTIVE_HIGH> // Col 2 
-            , <&gpio0 29 GPIO_ACTIVE_HIGH> // Col 3
-            , <&gpio0 28 GPIO_ACTIVE_HIGH> // Col 4 
-            , <&gpio0  2 GPIO_ACTIVE_HIGH> // Col 5
-            , <&gpio0  3 GPIO_ACTIVE_HIGH> // Col 6 L (most right)
+            = <&gpio0 19 GPIO_ACTIVE_HIGH>
+            , <&gpio0 21 GPIO_ACTIVE_HIGH>
+            , <&gpio0 23 GPIO_ACTIVE_HIGH>
+            , <&gpio0 12 GPIO_ACTIVE_HIGH>
+            , <&gpio1 9 GPIO_ACTIVE_HIGH>
             ;
-            
     };
 };
