--- a/config/boards/arm/Arckeys/arckeys_right.dts
+++ b/config/boards/arm/Arckeys/arckeys_right.dts
@@ -1,6 +1,6 @@
 /*
 *
-* Copyright (c) 2024 Ireh Choin
+* Copyright (c) 2023 The ZMK Contributors
 * SPDX-License-Identifier: MIT
 *
 */
@@ -8,33 +8,27 @@
 #include "arckeys.dtsi"
 
 /{
-    chosen {
-    };
-
     kscan0: kscan {
         compatible = "zmk,kscan-gpio-matrix";
 
         diode-direction = "col2row";
-        
         row-gpios
-            = <&gpio0  4 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 1 (top row)
-            , <&gpio0  5 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 2
-            , <&gpio1  9 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 3
-            , <&gpio0 11 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 4 (bottom row)
+            = <&gpio1 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&gpio1 1 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&gpio1 3 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&gpio0 22 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             ;
 
         col-gpios
-            = <&gpio0 10 GPIO_ACTIVE_HIGH> // Col 1 R (most left)
-            , <&gpio0  9 GPIO_ACTIVE_HIGH> // Col 2 
-            , <&gpio0 20 GPIO_ACTIVE_HIGH> // Col 3
-            , <&gpio0 17 GPIO_ACTIVE_HIGH> // Col 4 
-            , <&gpio0 15 GPIO_ACTIVE_HIGH> // Col 5
-            , <&gpio0  3 GPIO_ACTIVE_HIGH> // Col 6 R (most right)
+            = <&gpio0  21 GPIO_ACTIVE_HIGH>
+            , <&gpio0  19 GPIO_ACTIVE_HIGH>
+            , <&gpio0  23 GPIO_ACTIVE_HIGH>
+            , <&gpio0  12 GPIO_ACTIVE_HIGH>
+			, <&gpio1  9 GPIO_ACTIVE_HIGH>
             ;
-            
     };
 };
 
 &default_transform {
-    col-offset = <6>;
+    col-offset = <5>;
 };
