--- a/config/boards/arm/Arckeys/arckeys_right_defconfig
+++ b/config/boards/arm/Arckeys/arckeys_right_defconfig
@@ -12,6 +12,7 @@ CONFIG_ARM_MPU=y
 
 # enable GPIO
 CONFIG_GPIO=y
+CONFIG_NFCT_PINS_AS_GPIOS=y
 
 # Enable writing to flash
 CONFIG_USE_DT_CODE_PARTITION=y
@@ -38,3 +39,4 @@ CONFIG_BUILD_OUTPUT_UF2=y
 CONFIG_ZMK_BLE=y
 # Turn on logging, and set ZMK logging to debug output
 CONFIG_ZMK_USB_LOGGING=y
+
