--- a/config/boards/arm/arckeys/arckeys_left.dts
+++ b/config/boards/arm/arckeys/arckeys_left.dts
@@ -13,18 +13,22 @@
 
         diode-direction = "col2row";
         row-gpios
-            = <&gpio0 29 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&gpio0 30 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&gpio0 4 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&gpio0 5 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            = <&gpio1 10 GPIO_ACTIVE_HIGH>  // RW 1 [keynapse] - R0
+            , <&gpio1 6 GPIO_ACTIVE_HIGH>   // RW 2 [keynapse]
+            , <&gpio1 4 GPIO_ACTIVE_HIGH>   // RW 3 [keynapse]
+            , <&gpio1 11 GPIO_ACTIVE_HIGH>  // RW 4 [keynapse]
+            , <&gpio1 12 GPIO_ACTIVE_HIGH>  // RW 5 [keynapse]
+            , <&gpio1 13 GPIO_ACTIVE_HIGH>  // RW 6 [keynapse]
+            , <&gpio1 14 GPIO_ACTIVE_HIGH>  // RW 7 [keynapse] - R6
             ;
 
         col-gpios
-            = <&gpio0 19 GPIO_ACTIVE_HIGH>
-            , <&gpio0 21 GPIO_ACTIVE_HIGH>
-            , <&gpio0 23 GPIO_ACTIVE_HIGH>
-            , <&gpio0 12 GPIO_ACTIVE_HIGH>
-            , <&gpio1 9 GPIO_ACTIVE_HIGH>
+            = <&gpio1 15 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>   // CL 1 [keynapse] - C0
+            , <&gpio0 3 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>    
+            , <&gpio0 29 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>   
+            , <&gpio0 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>    
+            , <&gpio0 31 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>   
+            , <&gpio0 28 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>   // CL 6 [keynapse] - C6
             ;
     };
 };
