--- a/config/boards/arm/arckeys/arckeys_right.dts
+++ b/config/boards/arm/arckeys/arckeys_right.dts
@@ -13,22 +13,26 @@
 
         diode-direction = "col2row";
         row-gpios
-            = <&gpio1 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&gpio1 1 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&gpio1 3 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&gpio0 22 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            = <&gpio1 10 GPIO_ACTIVE_HIGH>  // RW 1 [keynapse] - R0
+            , <&gpio1 6 GPIO_ACTIVE_HIGH>   // RW 2 [keynapse]
+            , <&gpio1 4 GPIO_ACTIVE_HIGH>   // RW 3 [keynapse]
+            , <&gpio1 11 GPIO_ACTIVE_HIGH>  // RW 4 [keynapse]
+            , <&gpio1 12 GPIO_ACTIVE_HIGH>  // RW 5 [keynapse]
+            , <&gpio1 13 GPIO_ACTIVE_HIGH>  // RW 6 [keynapse]
+            , <&gpio1 14 GPIO_ACTIVE_HIGH>  // RW 7 [keynapse] - R6
             ;
 
         col-gpios
-            = <&gpio0  21 GPIO_ACTIVE_HIGH>
-            , <&gpio0  19 GPIO_ACTIVE_HIGH>
-            , <&gpio0  23 GPIO_ACTIVE_HIGH>
-            , <&gpio0  12 GPIO_ACTIVE_HIGH>
-			, <&gpio1  9 GPIO_ACTIVE_HIGH>
+            = <&gpio0 28 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>   // CL 6 [keynapse] - C0
+            , <&gpio0 31 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&gpio0 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&gpio0 29 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&gpio0 3 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&gpio1 15 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>   // CL 1 [keynapse] - C6
             ;
     };
 };
 
 &default_transform {
-    col-offset = <5>;
+    col-offset = <6>;
 };
