--- a/config/boards/arm/arckeys/arckeys_right_defconfig
+++ b/config/boards/arm/arckeys/arckeys_right_defconfig
@@ -33,7 +33,7 @@ CONFIG_BT_MAX_CONN=6
 CONFIG_BT_MAX_PAIRED=6
 # This is new with Zephyr 3.5 and should improve connectivity
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
-CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
+# CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 CONFIG_BUILD_OUTPUT_UF2=y
 CONFIG_ZMK_BLE=y
