--- a/config/boards/arm/arckeys/arckeys_right_defconfig
+++ b/config/boards/arm/arckeys/arckeys_right_defconfig
@@ -6,6 +6,7 @@
 CONFIG_SOC_SERIES_NRF52X=y
 CONFIG_SOC_NRF52840_QIAA=y
 CONFIG_BOARD_ARCKEYS_RIGHT=y
+CONFIG_ZMK_SLEEP=n
 
 # Enable MPU
 CONFIG_ARM_MPU=y
@@ -36,7 +37,6 @@ CONFIG_BT_MAX_PAIRED=6
 # CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 CONFIG_BUILD_OUTPUT_UF2=y
+CONFIG_ZMK_USB=y
 CONFIG_ZMK_BLE=y
-# Turn on logging, and set ZMK logging to debug output
-CONFIG_ZMK_USB_LOGGING=y
 
