--- a/config/boards/arm/arckeys/arckeys.dtsi
+++ b/config/boards/arm/arckeys/arckeys.dtsi
@@ -23,7 +23,7 @@
         zephyr,code-partition = &code_partition;
         zephyr,sram = &sram0;
         zephyr,flash = &flash0;
-        zephyr,console = &cdc_acm_uart;
+        zephyr,usb-device = &usbd;
         zmk,kscan = &kscan0;
         zmk,battery = &vbatt;
         zmk,matrix-transform = &default_transform;
@@ -71,9 +71,6 @@
 
 &usbd {
     status = "okay";
-    cdc_acm_uart: cdc_acm_uart {
-        compatible = "zephyr,cdc-acm-uart";
-    };
 };
 
 &flash0 {
