--- a/config/boards/arm/arckeys/arckeys.dtsi
+++ b/config/boards/arm/arckeys/arckeys.dtsi
@@ -78,33 +78,23 @@
      * For more information, see:
      * http://docs.zephyrproject.org/latest/devices/dts/flash_partitions.html
      */
+     
     partitions {
         compatible = "fixed-partitions";
         #address-cells = <1>;
         #size-cells = <1>;
 
-        sd_partition: partition@0 {
-            reg = <0x00000000 0x00026000>;
-        };
-        code_partition: partition@26000 {
-            reg = <0x00026000 0x000c6000>;
+        /* ★ SoftDevice 제거: 앱을 0x0000에서 시작 */
+        code_partition: partition@0 {
+            reg = <0x00000000 0x000ec000>;   // 앱 영역 (부트/스토리지 앞까지)
         };
 
-        /*
-         * The flash starting at 0x000ec000 and ending at
-         * 0x000f3fff is reserved for use by the application.
-         */
-
-        /*
-         * Storage partition will be used by FCB/LittleFS/NVS
-         * if enabled.
-         */
         storage_partition: partition@ec000 {
-            reg = <0x000ec000 0x00008000>;
+            reg = <0x000ec000 0x00008000>;   // 32 KB (원래 값 유지)
         };
 
         boot_partition: partition@f4000 {
-            reg = <0x000f4000 0x0000c000>;
+            reg = <0x000f4000 0x0000c000>;   // 48 KB 부트로더 (Adafruit 기본과 일치)
         };
     };
 };
