flash memory updated

--- a/config/boards/arm/arckeys/arckeys.dtsi
+++ b/config/boards/arm/arckeys/arckeys.dtsi
@@ -79,24 +79,29 @@
         #address-cells = <1>;
         #size-cells = <1>;
 
-        /* Placeholder: 4KB */
+        
         sd_partition: partition@0 {
-            reg = <0x00000000 0x00001000>;  // 4KB
+            reg = <0x00000000 0x00026000>;
+        };
+        code_partition: partition@26000 {
+            reg = <0x00026000 0x000c6000>;
         };
 
-        /* Code: 4KB ~ 848KB */
-        code_partition: partition@1000 {
-            reg = <0x00001000 0x000D3000>;  // 844KB
+        /*
+         * The flash starting at 0x000ec000 and ending at
+         * 0x000f3fff is reserved for use by the application.
+         */
+
+        /*
+         * Storage partition will be used by FCB/LittleFS/NVS
+         * if enabled.
+         */
+        storage_partition: partition@ec000 {
+            reg = <0x000ec000 0x00008000>;
         };
 
-        /* Storage: 848KB ~ 976KB */
-        storage_partition: partition@d4000 {
-            reg = <0x000D4000 0x00020000>;  // 128KB
-        };
-
-        /* Bootloader: 976KB ~ 1024KB */
         boot_partition: partition@f4000 {
-            reg = <0x000F4000 0x0000C000>;  // 48KB
+            reg = <0x000f4000 0x0000c000>;
         };
     };
 };
