--- a/config/boards/arm/arckeys/arckeys_right_defconfig
+++ b/config/boards/arm/arckeys/arckeys_right_defconfig
@@ -6,17 +6,40 @@
 CONFIG_SOC_SERIES_NRF52X=y
 CONFIG_SOC_NRF52840_QIAA=y
 CONFIG_BOARD_ARCKEYS_RIGHT=y
-CONFIG_ZMK_SLEEP=n
+
+# Enable both USB and BLE
+CONFIG_ZMK_USB=y
+CONFIG_ZMK_BLE=y
+
+# Keyboard IDs
+CONFIG_ZMK_KEYBOARD_NAME="Arckeys Right"
+CONFIG_USB_DEVICE_PID=0x27db
+CONFIG_USB_DEVICE_VID=0x16c0
+CONFIG_USB_DEVICE_MANUFACTURER="Erasing"
+CONFIG_USB_DEVICE_SN="moergo.com:GLV80-0123456789ABCDEF"
+
+CONFIG_BT_DIS_PNP_PID=0x27db
+CONFIG_BT_DIS_PNP_VID=0x16c0
+CONFIG_BT_DIS_MANUF="Erasing"
+CONFIG_BT_DIS_MODEL="Arckeys"
+
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Work-around for Windows bug with battery notifications
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
 # Enable MPU
 CONFIG_ARM_MPU=y
 
-# enable GPIO
+# Enable GPIO
 CONFIG_GPIO=y
-CONFIG_NFCT_PINS_AS_GPIOS=y
 
-# Enable writing to flash
+# Build configurations
+CONFIG_BUILD_OUTPUT_UF2=y
+CONFIG_BUILD_OUTPUT_UF2_FAMILY_ID="0x9807B007"
 CONFIG_USE_DT_CODE_PARTITION=y
+
+# Flash configuration
 CONFIG_MPU_ALLOW_FLASH_WRITE=y
 CONFIG_NVS=y
 CONFIG_SETTINGS_NVS=y
@@ -26,17 +49,20 @@ CONFIG_FLASH_MAP=y
 
 # Enable 32kHz crystal
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
-CONFIG_CLOCK_CONTROL_NRF_K32SRC_150PPM=y
 
-#Misc configuration
-# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_BT_MAX_CONN=6
-CONFIG_BT_MAX_PAIRED=6
-# This is new with Zephyr 3.5 and should improve connectivity
-# CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
-# CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
+# The full two-byte consumer report space has compatibility issues with some
+# operating systems, most notably macOS. Use the more basic single-byte usage
+# space.
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
-CONFIG_BUILD_OUTPUT_UF2=y
-CONFIG_ZMK_USB=y
-CONFIG_ZMK_BLE=y
 
+# Turn on debugging to disable optimization. Debug messages can result in larger
+# stacks, so enable stack protection and particularly a larger BLE peripheral stack.
+# CONFIG_DEBUG=y
+# CONFIG_DEBUG_THREAD_INFO=y
+# CONFIG_EXCEPTION_STACK_TRACE=y
+# CONFIG_HW_STACK_PROTECTION=y
+# CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_STACK_SIZE=1300
+
+# Log via USB or Segger RTT
+CONFIG_ZMK_USB_LOGGING=n
+CONFIG_ZMK_RTT_LOGGING=n
