--- a/config/boards/arm/arckeys/Kconfig
+++ b/config/boards/arm/arckeys/Kconfig
@@ -4,4 +4,10 @@ config BOARD_ENABLE_DCDC
     bool "Enable DCDC mode"
     select SOC_DCDC_NRF52X
     default y
-    depends on (BOARD_ARCKEYS_LEFT || BOARD_ARCKEYS_RIGHT)
+    depends on (BOARD_ARCKEYS)
+
+config BOARD_ENABLE_DCDC_HV
+    bool "High voltage DCDC converter"
+    select SOC_DCDC_NRF52X_HV
+    default n
+    depends on (BOARD_ARCKEYS)
