--- a/config/boards/arm/arckeys/arckeys.dtsi
+++ b/config/boards/arm/arckeys/arckeys.dtsi
@@ -1,50 +1,28 @@
 /*
-*
-* Copyright (c) 2023 The ZMK Contributors
-* SPDX-License-Identifier: MIT
-*
-*/
+ * Copyright (c) 2021 The ZMK Contributors
+ *
+ * SPDX-License-Identifier: MIT
+ */
 
-/dts-v1/;
 #include <nordic/nrf52840_qiaa.dtsi>
-#include <dt-bindings/zmk/matrix_transform.h>
-
 #include "arckeys-pinctrl.dtsi"
-
 
 / {
     model = "arckeys";
     compatible = "arckeys";
 
     chosen {
-        zmk,kscan = &kscan0;
-        zmk,matrix-transform = &default_transform;
         zephyr,code-partition = &code_partition;
         zephyr,sram = &sram0;
         zephyr,flash = &flash0;
-        zmk,battery = &vbatt;
     };
 
-    default_transform: keymap_transform_0 {
-        compatible = "zmk,matrix-transform";
-        columns = <12>;
-        rows = <7>;
-        map = <
-            RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)          RC(0,6) RC(0,7) RC(0,8) RC(0,9) RC(0,10) RC(0,11)
-            RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)          RC(1,6) RC(1,7) RC(1,8) RC(1,9) RC(1,10) RC(1,11)
-            RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)          RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10) RC(2,11)
-            RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)          RC(3,6) RC(3,7) RC(3,8) RC(3,9) RC(3,10) RC(3,11)
-                            RC(4,2) RC(4,3)                                          RC(4,8) RC(4,9)
-                            RC(5,2) RC(5,3) RC(5,4) RC(5,5)          RC(5,6) RC(5,7) RC(5,8) RC(5,9)
-                                            RC(6,4) RC(6,5)          RC(6,6) RC(6,7) 
-        >;
+    leds {
+        compatible = "gpio-leds";
+        blue_led: led_0 {
+            gpios = <&gpio0 15 GPIO_ACTIVE_HIGH>;
+        };
     };
-
-    
-    vbatt: vbatt {
-        compatible = "zmk,battery-nrf-vddh";
-    };
-
 };
 
 &adc {
@@ -63,17 +41,21 @@
     status = "okay";
 };
 
-&usbd {
+zephyr_udc0: &usbd {
     status = "okay";
 };
 
+
 &flash0 {
+    /*
+     * For more information, see:
+     * http://docs.zephyrproject.org/latest/devices/dts/flash_partitions.html
+     */
     partitions {
         compatible = "fixed-partitions";
         #address-cells = <1>;
         #size-cells = <1>;
 
-        
         sd_partition: partition@0 {
             reg = <0x00000000 0x00026000>;
         };
