--- a/config/boards/arm/arckeys/arckeys.yaml
+++ b/config/boards/arm/arckeys/arckeys.yaml
@@ -1,16 +1,15 @@
 identifier: arckeys
 name: arckeys
-type: keyboard
+type: mcu
 arch: arm
 toolchain:
   - zephyr
   - gnuarmemb
   - xtools
 supported:
-  - gpio
-  - counter
+  - adc
   - usb_device
-  - nvs
-  - can
-  - kscan
   - ble
+  - ieee802154
+  - pwm
+  - watchdog
