--- a/config/boards/arm/arckeys/Kconfig
+++ b/config/boards/arm/arckeys/Kconfig
@@ -1,13 +1,10 @@
+#
+# Copyright (c) 2022 The ZMK Contributors
 # SPDX-License-Identifier: MIT
+#
 
-config BOARD_ENABLE_DCDC
-    bool "Enable DCDC mode"
-    select SOC_DCDC_NRF52X
-    default y
-    depends on (BOARD_ARCKEYS)
+config BOARD_ARCKEYS_LEFT
+    bool
 
-config BOARD_ENABLE_DCDC_HV
-    bool "High voltage DCDC converter"
-    select SOC_DCDC_NRF52X_HV
-    default n
-    depends on (BOARD_ARCKEYS)
+config BOARD_ARCKEYS_RIGHT
+    bool
