--- a/build.yaml
+++ b/build.yaml
@@ -21,8 +21,6 @@
 #   - board: corneish_zen_v2_left
 #   - board: corneish_zen_v2_right
 include:
-  - board: arckeys
-    shield: a_dux_left
-  - board: arckeys
-    shield: a_dux_right
+  - board: arckeys_left
+  - board: arckeys_right
 
