--- a/config/boards/arm/arckeys/arckeys.yaml
+++ b/config/boards/arm/arckeys/arckeys.yaml
@@ -7,14 +7,11 @@ toolchain:
   - gnuarmemb
   - xtools
 supported:
+  - adc
   - gpio
-  - i2c
-  - counter
-  - spi
   - usb_device
-  - lsm303dlhc
-  - nvs
-  - can
   - kscan
   - ble
-  - adc
+  - ieee802154
+  - pwm
+  - watchdog
