--- a/config/boards/arm/split_heart/split_heart_right_defconfig
+++ b/config/boards/arm/split_heart/split_heart_right_defconfig
@@ -4,21 +4,8 @@
 #
 CONFIG_SOC_SERIES_NRF52X=y
 CONFIG_SOC_NRF52840_QIAA=y
-CONFIG_BOARD_ARCKEYS_LEFT=y
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_USB=y
-CONFIG_ZMK_BLE=y
-
-# Enable MPU
-CONFIG_ARM_MPU=y
-
-# enable pinctrl
-CONFIG_PINCTRL=y
-
-# enable GPIO
-CONFIG_GPIO=y
-
-CONFIG_NFCT_PINS_AS_GPIOS=y
+CONFIG_BOARD_SPLIT_HEART_RIGHT=y
+CONFIG_ZMK_SLEEP=n
 
 # Disable 32kHz crystal
 CONFIG_BOARD_ENABLE_DCDC=y       # REG0: LDO 모드
@@ -27,19 +14,26 @@ CONFIG_BOARD_ENABLE_DCDC_HV=n    # REG1: LDO 모드
 # LFCLK를 외부 XTAL 대신 RC로 사용
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=n
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
-CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC_CALIBRATION=y   # 권장: 온도/주기 보정
+
+# Enable external 32kHz crystal
+# CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
+# CONFIG_CLOCK_CONTROL_NRF_K32SRC_30PPM=y
+
+# enable pinctrl
+CONFIG_PINCTRL=y
+
+# enable GPIO
+CONFIG_GPIO=y
 
 # Enable writing to flash
 CONFIG_USE_DT_CODE_PARTITION=y
 CONFIG_BUILD_OUTPUT_UF2=y
-CONFIG_MPU_ALLOW_FLASH_WRITE=y
 CONFIG_NVS=y
 CONFIG_SETTINGS_NVS=y
 CONFIG_FLASH=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_FLASH_MAP=y
 
-# 주변장치 끄기
-CONFIG_SERIAL=n
-CONFIG_I2C=n
-CONFIG_SPI=n
+CONFIG_ZMK_USB=y
+CONFIG_ZMK_BLE=y
+CONFIG_NFCT_PINS_AS_GPIOS=y
