--- a/config/boards/arm/split_heart/split_heart_right_defconfig
+++ b/config/boards/arm/split_heart/split_heart_right_defconfig
@@ -8,8 +8,8 @@ CONFIG_BOARD_SPLIT_HEART_RIGHT=y
 CONFIG_ZMK_SLEEP=n
 
 # Disable 32kHz crystal
-CONFIG_BOARD_ENABLE_DCDC=y       # REG0: LDO 모드
-CONFIG_BOARD_ENABLE_DCDC_HV=n    # REG1: LDO 모드
+CONFIG_BOARD_ENABLE_DCDC=y
+CONFIG_BOARD_ENABLE_DCDC_HV=n
 
 # LFCLK를 외부 XTAL 대신 RC로 사용
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=n
