--- a/config/boards/arm/split_heart/split_heart.conf
+++ b/config/boards/arm/split_heart/split_heart.conf
@@ -3,3 +3,12 @@
 
 # Turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
+
+
+# LFCLK를 외부 XTAL 대신 RC로 사용
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=n
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
+
+# Disable 32kHz crystal
+CONFIG_BOARD_ENABLE_DCDC=y
+CONFIG_BOARD_ENABLE_DCDC_HV=n
