--- a/config/boards/arm/split_heart/split_heart_right.dts
+++ b/config/boards/arm/split_heart/split_heart_right.dts
@@ -17,20 +17,21 @@
         diode-direction = "col2row";
         
         row-gpios
-            = <&gpio0  4 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 1 (top row)
-            , <&gpio0  5 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 2
-            , <&gpio1  9 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 3
-            , <&gpio0 11 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 4 (bottom row)
-            
+            = <&gpio1 10 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 1 (top row)
+            , <&gpio1  6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 2
+            , <&gpio1  4 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 3
+            , <&gpio1 11 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 4 
+            , <&gpio1 12 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 5
+            , <&gpio1 13 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 6 (bottom row)
             ;
 
         col-gpios
-            = <&gpio0 10 GPIO_ACTIVE_HIGH> // Col 1 R (most left)
-            , <&gpio0  9 GPIO_ACTIVE_HIGH> // Col 2 
-            , <&gpio0 20 GPIO_ACTIVE_HIGH> // Col 3
-            , <&gpio0 17 GPIO_ACTIVE_HIGH> // Col 4 
-            , <&gpio0 15 GPIO_ACTIVE_HIGH> // Col 5
-            , <&gpio0  3 GPIO_ACTIVE_HIGH> // Col 6 R (most right)
+            = <&gpio1 15 GPIO_ACTIVE_HIGH> // Col 1 L (most left)
+            , <&gpio0  3 GPIO_ACTIVE_HIGH> // Col 2 
+            , <&gpio0 29 GPIO_ACTIVE_HIGH> // Col 3
+            , <&gpio0  2 GPIO_ACTIVE_HIGH> // Col 4 
+            , <&gpio0 31 GPIO_ACTIVE_HIGH> // Col 5
+            , <&gpio0 28 GPIO_ACTIVE_HIGH> // Col 6 L (most right)
             ;
             
     };
