--- a/config/boards/arm/split_heart/split_heart_left.dts
+++ b/config/boards/arm/split_heart/split_heart_left.dts
@@ -21,17 +21,17 @@
             , <&gpio1  6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 2
             , <&gpio1  4 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 3
             , <&gpio1 11 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 4 
-            , <&gpio1 12 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 5
-            , <&gpio1 13 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 6 (bottom row)
+            , <&gpio1 12 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 5 (bottom row)
+            , <&gpio1 13 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // RW 6 (thumb cluster)
             ;
 
         col-gpios
-            = <&gpio1 15 GPIO_ACTIVE_HIGH> // Col 1 L (most left)
+            = <&gpio1 15 GPIO_ACTIVE_HIGH> // Col 1  (Outer)
             , <&gpio0  3 GPIO_ACTIVE_HIGH> // Col 2 
             , <&gpio0 29 GPIO_ACTIVE_HIGH> // Col 3
             , <&gpio0  2 GPIO_ACTIVE_HIGH> // Col 4 
             , <&gpio0 31 GPIO_ACTIVE_HIGH> // Col 5
-            , <&gpio0 28 GPIO_ACTIVE_HIGH> // Col 6 L (most right)
+            , <&gpio0 28 GPIO_ACTIVE_HIGH> // Col 6  (Inner)
             ;
             
     };
