--- a/config/boards/arm/split_heart/split_heart_right.dts
+++ b/config/boards/arm/split_heart/split_heart_right.dts
@@ -26,12 +26,12 @@
             ;
 
         col-gpios
-            = <&gpio1 15 GPIO_ACTIVE_HIGH> // Col 1  (most left)
+            = <&gpio1 15 GPIO_ACTIVE_HIGH> // Col 1  (Outer)
             , <&gpio0  3 GPIO_ACTIVE_HIGH> // Col 2 
             , <&gpio0 29 GPIO_ACTIVE_HIGH> // Col 3
             , <&gpio0  2 GPIO_ACTIVE_HIGH> // Col 4 
             , <&gpio0 31 GPIO_ACTIVE_HIGH> // Col 5
-            , <&gpio0 28 GPIO_ACTIVE_HIGH> // Col 6  (most right)
+            , <&gpio0 28 GPIO_ACTIVE_HIGH> // Col 6  (Inner)
             ;
             
     };
