--- a/config/boards/arm/split_heart/split_heart.conf
+++ b/config/boards/arm/split_heart/split_heart.conf
@@ -12,3 +12,5 @@ CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 # Disable 32kHz crystal
 CONFIG_BOARD_ENABLE_DCDC=y
 CONFIG_BOARD_ENABLE_DCDC_HV=n
+
+CONFIG_ZMK_POINTING=y
