--- a/config/boards/arm/split_heart/split_heart_right_defconfig
+++ b/config/boards/arm/split_heart/split_heart_right_defconfig
@@ -7,6 +7,7 @@ CONFIG_SOC_NRF52840_QIAA=y
 CONFIG_BOARD_SPLIT_HEART_RIGHT=y
 CONFIG_ZMK_SLEEP=n
 CONFIG_ZMK_POINTING=y
+CONFIG_ZMK_BACKLIGHT=y
 
 
 # LFCLK를 외부 XTAL 대신 RC로 사용
