--- a/config/boards/arm/split_heart/split_heart.dtsi
+++ b/config/boards/arm/split_heart/split_heart.dtsi
@@ -8,6 +8,7 @@
 /dts-v1/;
 #include <nordic/nrf52840_qiaa.dtsi>
 #include <dt-bindings/zmk/matrix_transform.h>
+#include "split_heart-pinctrl.dtsi" 
 
 / {
     model = "Split Heart";
