--- a/config/boards/arm/split_heart/split_heart.dtsi
+++ b/config/boards/arm/split_heart/split_heart.dtsi
@@ -43,6 +43,24 @@
         >;
     };
 
+
+    // LED 정의
+    leds {
+        compatible = "gpio-leds";
+        led_green: led_0 {
+            gpios = <&gpio0 4 GPIO_ACTIVE_LOW>;  // P0.04, Active LOW (3.8V에서 당김)
+            label = "Green LED";
+        };
+        led_red: led_1 {
+            gpios = <&gpio0 6 GPIO_ACTIVE_LOW>;   // P0.06, Active LOW
+            label = "Red LED";
+        };
+        led_blue: led_2 {
+            gpios = <&gpio0 8 GPIO_ACTIVE_LOW>;   // P0.08, Active LOW
+            label = "Blue LED";
+        };
+    };
+
 };
 
 
