--- a/config/boards/arm/split_heart/split_heart_right_defconfig
+++ b/config/boards/arm/split_heart/split_heart_right_defconfig
@@ -5,6 +5,8 @@
 CONFIG_SOC_SERIES_NRF52X=y
 CONFIG_SOC_NRF52840_QIAA=y
 CONFIG_BOARD_SPLIT_HEART_RIGHT=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+
 CONFIG_ZMK_SLEEP=n
 CONFIG_ZMK_POINTING=y
 # CONFIG_ZMK_BACKLIGHT=y
