--- a/config/boards/arm/split_heart/Kconfig
+++ b/config/boards/arm/split_heart/Kconfig
@@ -1,5 +1,11 @@
-config BOARD_SPLIT_HEART_LEFT
-       bool
-   
-config BOARD_SPLIT_HEART_RIGHT
-       bool
+config BOARD_ENABLE_DCDC
+    bool "Enable DCDC mode"
+    select SOC_DCDC_NRF52X
+    default y
+    depends on (BOARD_MIKOTO)
+
+config BOARD_ENABLE_DCDC_HV
+    bool "High voltage DCDC converter"
+    select SOC_DCDC_NRF52X_HV
+    default n
+    depends on (BOARD_MIKOTO)
