--- a/config/boards/arm/split_heart/split_heart_left_defconfig
+++ b/config/boards/arm/split_heart/split_heart_left_defconfig
@@ -5,8 +5,11 @@
 CONFIG_SOC_SERIES_NRF52X=y
 CONFIG_SOC_NRF52840_QIAA=y
 CONFIG_BOARD_SPLIT_HEART_LEFT=y
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 
+# Enable MPU
+CONFIG_ARM_MPU=y
+
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 CONFIG_ZMK_SLEEP=n
 CONFIG_ZMK_POINTING=y
 # CONFIG_ZMK_BACKLIGHT=y
