--- a/config/boards/arm/split_heart/split_heart_right_defconfig
+++ b/config/boards/arm/split_heart/split_heart_right_defconfig
@@ -6,6 +6,9 @@ CONFIG_SOC_SERIES_NRF52X=y
 CONFIG_SOC_NRF52840_QIAA=y
 CONFIG_BOARD_SPLIT_HEART_RIGHT=y
 
+# Enable MPU
+CONFIG_ARM_MPU=y
+
 CONFIG_ZMK_SLEEP=n
 CONFIG_ZMK_POINTING=y
 # CONFIG_ZMK_BACKLIGHT=y
@@ -36,6 +39,6 @@ CONFIG_FLASH=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_FLASH_MAP=y
 
-CONFIG_ZMK_USB=y
+CONFIG_ZMK_USB=n
 CONFIG_ZMK_BLE=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
