--- a/config/boards/arm/split_heart/split_heart.conf
+++ b/config/boards/arm/split_heart/split_heart.conf
@@ -13,5 +13,6 @@ CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 CONFIG_BOARD_ENABLE_DCDC=y
 CONFIG_BOARD_ENABLE_DCDC_HV=n
 
+CONFIG_BT_CTLR_PHY_2M=n
 CONFIG_ZMK_POINTING=y
 # CONFIG_ZMK_BACKLIGHT=y
