--- a/config/boards/arm/split_heart/split_heart_left_defconfig
+++ b/config/boards/arm/split_heart/split_heart_left_defconfig
@@ -14,6 +14,8 @@ CONFIG_ZMK_SLEEP=n
 CONFIG_ZMK_POINTING=y
 # CONFIG_ZMK_BACKLIGHT=y
 
+CONFIG_BT_CTLR_PHY_2M=n
+
 
 # LFCLK를 외부 XTAL 대신 RC로 사용
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=n
