--- a/config/boards/arm/split_heart/split_heart_right_defconfig
+++ b/config/boards/arm/split_heart/split_heart_right_defconfig
@@ -10,10 +10,8 @@ CONFIG_BOARD_SPLIT_HEART_RIGHT=y
 CONFIG_ARM_MPU=y
 
 CONFIG_ZMK_SLEEP=n
-CONFIG_ZMK_POINTING=n
+CONFIG_ZMK_POINTING=y
 # CONFIG_ZMK_BACKLIGHT=y
-
-CONFIG_BT_CTLR_PHY_2M=n
 
 
 # LFCLK를 외부 XTAL 대신 RC로 사용
